# opti-face

./: .env  .gitignore  LICENSE  README.md  app.py  app.spec  inference.py  inference_system_v1.py  inference_without_async.py  initialtrainingapitest.py  main.py  noz.py  prepare_embeddings.py  prepare_embeddings_system_v1.py  pyproject.toml  requirements.txt
checkpoints/: .gitkeep
face_alignment/: align.py  mtcnn.py
face_alignment/mtcnn_pytorch/src/: align_trans.py  matlab_cp2tform.py
logs/: detection_log.csv
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
src/: main.py  opti-face-app.py  test_auth.py
src/backend/: inference.py  prepare_embeddings.py
src/backend/api/auth/: auth_functons.py  session_manager.py
src/backend/api/auth/encryption/: aes256.py
src/backend/api/auth/hashing/: argon2id_functions.py
src/backend/api/db/: db_connection.py
src/backend/api/training/: trainingthread.py
src/backend/face_database/: .gitkeep
src/backend/utils/: face_utils.py  scrfd.py
src/gui/: main.py  prac.py  styles.py
src/gui/login/: login_page.py
src/gui/mainscreen/: copu  mainpage.py
src/pages/: embeddings_manager.py  live_view.py  records.py  settings_page.py  start.py
src/pages/dialogboxes/: progress.py
src/pipelines/: face_recognition_pipeline.py  training_pipeline.py
src/utils/: edgeface.py  face_utils.py  path_patch_v1.py  scrfd.py
utils/: box_utils_numpy.py  edgeface.py  face_detection.py  face_recognition.py  face_utils.py  model_utils.py  scrfd.py
