[project]
name = "optiface-full"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=23.1.0",
    "cryptography>=44.0.2",
    "dotenv>=0.9.9",
    "mediapipe==0.10.14",
    "numpy<2",
    "onnxruntime==1.18.0",
    "opencv-python>=4.11.0.86",
    "psycopg2>=2.9.10",
    "pyqt6>=6.9.0",
    "qtawesome>=1.4.0",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

