[project]
name = "default"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.21",
    "onnxruntime>=1.21.1",
    "opencv-python>=4.11.0.86",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
